--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@emotion/react": "^11.10.5"
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.8"
   }
 }
